added witness component and button

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
                     <div class="filter filters__officer"></div>
                     <div class="notes__button"></div>
                     <div class="noteForm__button"></div>
+                    <div class="witness__button"></div>
                 </div>
             </navbar>
         <article class="noteFormContainer"></article>
             <div class="listsContainer">
                 <article class="criminalsContainer"></article>
+                <article class="witnessContainer"> </article>
                 <article class="notesContainer"></article>
             </div>
             <div class="knownAssociatesContainer"></div>
